--- a/Task 5/Task-5-1/resources/dependency.properties
+++ b/Task 5/Task-5-1/resources/dependency.properties
@@ -1,4 +1,9 @@
-additionalServiceRepo = com.senla.elhoteladmin.dao.AdditionalServiceDaoImpl
-bookingOrderRepo = com.senla.elhoteladmin.dao.BookingOrderDaoImpl
-guestRepo = com.senla.elhoteladmin.dao.GuestDaoImpl
-roomRepo = com.senla.elhoteladmin.dao.RoomDaoImpl
+additionalServiceRepo = com.senla.daoservice.dao.AdditionalServiceDaoImpl
+bookingOrderRepo = com.senla.daoservice.dao.BookingOrderDaoImpl
+guestRepo = com.senla.daoservice.dao.GuestDaoImpl
+roomRepo = com.senla.daoservice.dao.RoomDaoImpl
+additionalServiceService = com.senla.daoservice.service.AdditionalServiceService
+bookingOrderService = com.senla.daoservice.service.BookingOrderService
+guestService = com.senla.daoservice.service.GuestService
+roomService = com.senla.daoservice.service.RoomService
+adminController = com.senla.daoservice.controller.AdminController
